# rag

./: README.md  agent.py  chunk.py  chunk_embedding.py  chunk_extract.py  chunk_extract.txt  chunk_rewrite.py  chunk_search.py  experiment1.ipynb  main.py  models.py  provider.py  pyproject.toml  routes.py  services.py  test.txt
api_docs/: api_spec.md
dataset/: doc1.json  doc1.md  doc2.json  doc2.md  doc3.json  doc3.md
history/: 1.jsonl  2.jsonl  3.jsonl
milvus_demo.db/collections/my_collection/: manifest.json  manifest.json.prev  schema.json
milvus_demo.db/collections/my_collection/partitions/_default/data/: data_000001_000008.parquet  data_000009_000016.parquet  data_000017_000023.parquet
milvus_demo.db/collections/my_collection/partitions/_default/indexes/: data_000001_000008.text_dense.autoindex.idx  data_000009_000016.text_dense.autoindex.idx  data_000017_000023.text_dense.autoindex.idx
