[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.26.2",
    "fastapi>=0.139.0",
    "jieba>=0.42.1",
    "openai>=2.44.0",
    "pymilvus[milvus-lite]>=3.0.0",
    "uvicorn>=0.50.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
]
